--- a/.gitignore
+++ b/.gitignore
@@ -156,6 +156,7 @@ cython_debug/
 data/
 *.db
 *.db-journal
+data_sql/
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
